--- a/style.css
+++ b/style.css
@@ -9,14 +9,17 @@
 	margin: 10px 25%;
 }
 
-.upgrades {
+.upgrades, .weapons {
 	background-color: white;
 	padding: 10px;
 	font-size: 25px;
 }
 
 .upgrades-table {
-	/*width: 10%;*/
+	margin: auto;
+}
+
+.weapons-table {
 	margin: auto;
 }
 
@@ -32,7 +35,6 @@ td {
 
 .hp {
 	top: 10px;
-	/*width: 50%;*/
 	text-align: center;
 	margin: auto;
 	font-size: 40px;
