--- a/css/style.css
+++ b/css/style.css
@@ -10,5 +10,5 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url(../images/background1.png);
+    background-image: url(../images/background.png);
 }
