--- a/css/style.css
+++ b/css/style.css
@@ -14,11 +14,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url(../images/background.png);
+    /*background-image: url(../images/background.png);*/
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
 }
 #fps-counter{
-    color: #fff;
+    /*color: #fff;*/
 }
