fixed remove; added scores

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
     margin: 0 auto;
 }
 .containerFild{
-    height: 100vh;
+    height: 97vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -21,4 +21,7 @@
 }
 #fps-counter{
     /*color: #fff;*/
+}
+#scores{
+    text-align: center;
 }
